--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=0.6, maximum-scale=1.0, user-scalable=0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using 🏗 scaffold-eth" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="a decentralized team management platform for NestCoin" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/nestlogo.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
